// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Component Menu renders open menu and matches snapshot 1`] = `
<div>
  <div
    style="cursor: pointer;"
  >
    <button>
      Open Menu
    </button>
  </div>
  <div
    class="test-content"
    style="position: fixed; z-index: 1000; top: 8px; left: 8px; opacity: 1; visibility: visible; pointer-events: auto;"
  >
    <div
      aria-disabled="false"
      class="test-item"
      role="menuitem"
      style="cursor: pointer; opacity: 1;"
    >
      Item 1
    </div>
    <div
      aria-disabled="false"
      role="menuitem"
      style="cursor: pointer; opacity: 1;"
    >
      Item 2
    </div>
    <div
      class="test-separator"
      role="separator"
    />
    <div
      aria-disabled="true"
      role="menuitem"
      style="cursor: not-allowed; opacity: 0.5;"
    >
      Disabled Item
    </div>
  </div>
</div>
`;

exports[`Menu Component Menu renders trigger correctly and matches snapshot 1`] = `
<div>
  <div
    style="cursor: pointer;"
  >
    <button>
      Open Menu
    </button>
  </div>
</div>
`;
